--- a/css/historical_map.css
+++ b/css/historical_map.css
@@ -66,10 +66,13 @@
 }
 
 #output {
-	/* order: 3; */
 	order: 2;
 	height: 100%; 	/* height: 726px; */
-	width: 550px;
+	/* width: 550px; */
+	width: 30%;
+	margin-left: 15px;
+	overflow-x: auto;
+	overflow-y: auto;
 	border-style: solid;
 	border-width: 1px;
 	border-color: white;
@@ -78,7 +81,7 @@
 	color: black;
 	font-size: 24px;
 	font-weight: bold;
-	text-align: -webkit-center;
+	/* text-align: -webkit-center; */
 }
 .opened_list_caption {
 	color: black;
