--- a/css/historical_map.css
+++ b/css/historical_map.css
@@ -81,7 +81,7 @@
 	font-family:"Trebuchet MS","sans-serif";
 	height: 100%; 	/* height: 726px; */
 	/* width: 550px; */
-	width: 30%;
+	width: 25%;
 	margin-left: 15px;
 	overflow-x: auto;
 	overflow-y: auto;
@@ -95,6 +95,13 @@
 	font-weight: bold;
 	/* text-align: -webkit-center; */
 }
+
+/* "Generic" unordered list for app - no indentation. */
+ul.unindented_ul {
+	list-style-position: inside;
+	padding-left: 0;
+}
+
 .opened_list_caption {
 	color: black;
 	font-size: 18px;
@@ -105,6 +112,7 @@
 	font-size: 18px;
 	font-weight: bold;
 }
+
 .reopened_list_caption {
 	color: #009cdc;
 	font-size: 18px;
@@ -115,6 +123,7 @@
 	font-size: 18px;
 	font-weight: bold;
 }
+
 .closed_list_caption {
 	color: #ef3e42;
 	font-size: 18px;
@@ -125,6 +134,7 @@
 	font-size: 18px;
 	font-weight: bold;
 }
+
 .legislative_list_caption {
 	color: #009b67;
 	font-size: 18px;
