--- a/css/historical_map.css
+++ b/css/historical_map.css
@@ -66,6 +66,9 @@
 	order: 1;
 	height: 40px;
 }
+#play_button {
+	width: 54px;
+}
 #slider-vertical {
 	order: 2;
 	height:686px; /* (was 726px) Appears to need a hard-wired height. */
@@ -78,6 +81,9 @@
 
 #output {
 	order: 2;
+	display: flex;
+	flex-flow: column wrap;
+	align-items: center;
 	font-family:"Trebuchet MS","sans-serif";
 	height: 100%; 	/* height: 726px; */
 	/* width: 550px; */
@@ -89,12 +95,36 @@
 	border-width: 1px;
 	border-color: white;
 }
-.year_header {
+
+#output_header {
+	order: 1;
+	display: flex;
+	flex-flow: row wrap;
+	width: 99%;
+	justify-content: space-between; 
+}
+#output_body {
+	order: 2;
+	display: flex;
+	flex-flow: column wrap;
+	width: 99%;
+}
+
+#output_year {
+	order: 1;
+	display: flex;
 	color: black;
 	font-size: 30px;
 	font-weight: bold;
-	/* text-align: -webkit-center; */
 }
+#download_button_div {
+	order: 2;
+	display: flex;
+}
+#download_button {
+	height: 21px;
+}
+
 
 /* Force vertical alignment of contents of <table> used to fake bullets in an unordered list. */
 td.fake_li_bullet {
